--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.10.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2"
