--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "material-ui": "^0.20.2",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.0",
