--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@material-ui/core": "^4.4.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "material-ui": "^0.20.2",
     "react": "^16.10.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.0",
+    "react-dropdown-input": "^0.1.11",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
+    "react-select": "^3.0.5",
     "reactstrap": "^8.0.1",
     "twilio": "^3.35.0",
     "twilio-video": "^1.19.2"
