--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-select": "^3.0.5",
+    "react-typeform-embed": "^0.2.1",
     "reactstrap": "^8.0.1",
     "twilio": "^3.35.0",
     "twilio-video": "^1.19.2"
